# desafio-gdash-2025-02

./: .env.example  docker-compose.yaml  nginx.conf  organization.md
backend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.error.ts  auth.module.ts  auth.repository.ts  auth.service.ts
backend/src/common/: copier.ts  effect-util.ts  hash-password.ts  mongoid.transformer.ts  mongoid.validation.ts  result.ts
backend/src/config/: database.config.ts  server.config.ts
backend/src/core/: core.controller.ts  core.module.ts
backend/src/setup/: database.factory.ts  open-api.factory.ts  validation.factory.ts  winston.factory.ts  winston.logger.ts
backend/src/user/: user.controller.ts  user.error.ts  user.module.ts  user.repository.ts  user.service.ts
backend/src/weather/: weather.controller.ts  weather.error.ts  weather.module.ts  weather.repository.spec.ts  weather.repository.ts  weather.service.ts
frontend/: package.json
go-worker/: .env.example  .golangci.yml  Dockerfile  README.md  go.mod  go.sum
go-worker/cmd/config/: config.go
go-worker/cmd/worker/: worker.go
python-collector/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
python-collector/src/: config.py  main.py
python-collector/src/api_client/: api.py
python-collector/src/cron_job/: cron_job.py
python-collector/src/dtos/: current_weather_dto.py
python-collector/src/logger/: logger.py
python-collector/src/producer/: producer.py
(+44 files in other folders)
