[project]
name = "python-weather-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "dacite>=1.9.2",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
]

[project.scripts]
weather-collector = "main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
